[metadata]
name = py-deepseek-api
version = 1.0.2
author = robinhust
description = Unoffical DeepSeek API for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robbinhust/py-deepseek-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
